--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   command = "npm run build"
-  publish="path-to-react-app/build"
+  publish="react-app-project/build"
   base = "react-app-project/"
 
 
